[gd_scene load_steps=4 format=3 uid="uid://bg81ju7pubray"]

[ext_resource type="Script" path="res://scripts/node.gd" id="1_r6fw1"]

[sub_resource type="SphereMesh" id="SphereMesh_aiai0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x4m45"]

[node name="Node" type="Node2D" groups=["nodes"]]
script = ExtResource("1_r6fw1")

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
scale = Vector2(17.97, 17.97)
mesh = SubResource("SphereMesh_aiai0")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource("CircleShape2D_x4m45")

[node name="MeshInstance2D2" type="MeshInstance2D" parent="."]

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, 9, 1, 9, 2, 9, 3, 8, 4, 8, 5, 7, 6, 6, 7, 5, 8, 4, 9, 3, 9, 2, 9, 1, 9, 0, 9, -1, 9, -2, 8, -3, 8, -4, 7, -6, 6, -7, 5, -7, 4, -8, 3, -8, 2, -9, 0, -9, -1, -9, -3, -9, -5, -8, -6, -7, -7, -7, -9, -5, -8, -4, -9, 0, -9, 1, -9, 2, -9, 3, -8, 4, -8, 4, -7, 5, -6, 6, -6, 6, -5, 7, -5, 8, -4, 8, -3, 9, -6, 6, -2, 9, -1, 9, 0, 9, -2, 9, -2, 9)
width = 2.0
default_color = Color(0, 0, 0, 1)
joint_mode = 2

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
